# dyn_small_obs_avoidance

./: README.md
FAST_LIO/Log/: mat_out.txt  mat_pre.txt
FAST_LIO/include/: so3_math.h
FAST_LIO/launch/: mapping_avia.launch  mapping_avia_outdoor.launch
FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp
livox_ros_driver/config/: display_lidar_points.rviz
livox_ros_driver/launch/: livox_lidar_msg.launch  livox_lidar_rviz.launch
livox_ros_driver/livox_ros_driver/: lddc.cpp  lds.cpp  lds.h  livox_ros_driver.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: demo.launch  demo_withNOlidar.launch  fiesta.rviz
path_planning/src/: goalpoint_transformer.cpp  path_planning.cpp
path_searching/: CMakeLists.txt  package.xml
path_searching/include/path_searching/: .swp  kinodynamic_astar.h
path_searching/src/: kinodynamic_astar.cpp
